toolbox: get it working on osx and linux.

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 My dot_files. Feel free to copy and use as you want.
+
+To install dotfiles as a docker container:
+
+wget https://gitlab.com/sundbp/dotfiles/raw/master/bin/mytoolbox
+chmod 755 mytoolbox
+sudo mv mytoolbox /usr/local/bin
